# magneto-rs

./: Cargo.toml  LICENSE  README.md  build.rs
src/: expand.rs  lib.rs  transpose.rs
